--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.1",
-    "redux": "^4.0.1"
+    "react-weui": "^1.1.3",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.2",
+    "weui": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
