--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "mockjs": "^1.0.1-beta3"
+    "mockjs": "^1.0.1-beta3",
+    "pretender": "^2.1.1"
   }
 }
