--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-transition-group": "^2.5.1",
     "react-weui": "^1.1.3",
     "redux": "^4.0.1",
-    "styled-components": "^4.1.2",
+    "styled-components": "^4.1.3",
     "weui": "^1.1.3"
   },
   "scripts": {
@@ -33,6 +33,7 @@
   ],
   "devDependencies": {
     "mockjs": "^1.0.1-beta3",
-    "pretender": "^2.1.1"
+    "pretender": "^2.1.1",
+    "vconsole": "^3.2.0"
   }
 }
