--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-transition-group": "^2.5.2",
     "react-weui": "^1.1.3",
     "redux": "^4.0.1",
+    "redux-form-utils": "^1.1.2",
     "styled-components": "^4.1.3",
     "weui": "^1.1.3"
   },
