--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "devDependencies": {
     "mockjs": "^1.0.1-beta3",
     "pretender": "^2.1.1",
-    "vconsole": "^3.2.0"
+    "vconsole": "^3.2.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   }
 }
