--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.2",
     "react-weui": "^1.1.3",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form-utils": "^1.1.2",
     "styled-components": "^4.1.3",
