--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.1",
     "redux-form-utils": "^1.1.2",
     "styled-components": "^4.1.3",
+    "uuid": "^3.3.2",
     "weui": "^1.1.3"
   },
   "scripts": {
