--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.2",
-    "react-weui": "^1.1.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form-utils": "^1.1.2",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2",
-    "weui": "^1.1.3"
+    "weui": "^1.1.3",
+    "weui.js": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
